# tap-domo

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_config.json
.circleci/: config.yml
tap_domo/: __init__.py  client.py  discovery.py  streams.py  sync.py
tap_domo/schemas/: customer.json  discount.json  inventory.json  invoice.json  payment.json  sample_schema.json  ticket.json
tests/: test_client.py  test_discovery.py
